2004-04-21  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* sockto.adb, sockto.out, ssockto.adb, ssockto.out, makefile:
	One more plain/secure pair of the socket timeout regression tests.

2004-04-19  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* ssto.adb:
	Fix typo in main procedure name.

2004-04-19  Pascal Obry  <pascal@obry.org>

	* makefile:
	(clean): Update rule.

2004-04-18  Pascal Obry  <pascal@obry.org>

	* makefile:
	(init): Set TZ to UTC before changing file timestamp to make sure
	 dirop regtest works across all timezone.
	Checked in for Dmitriy.

2004-04-18  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* ssto.adb, sto.adb:
	(Client_Side): Don't receive more than sent.

	* makefile:
	Add ssto and sto regression tests.

2004-04-12  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* ssock2.adb:
	Add main exception handler.

	* ssto.adb, sto.adb, ssto.out, sto.out:
	New regression tests for socket timeout.

2004-04-06  Pascal Obry  <p.obry@wanadoo.fr>

	* generate.adb:
	Fix previous check-in which was premature.
	
2004-04-06  Pascal Obry  <p.obry@wanadoo.fr>

	* generate.adb:
	Enclose all tests inside an exception handler. Ensure that even if
	 a test fails the test suite continue to run.
	
2004-04-06  Pascal Obry  <pascal.obry@edf.fr>

	* makefile:
	(RT_STD): Add smtp.

	* smtp.adb, smtp.out:
	Initial revision.

2004-04-05  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* makefile:
	Use libpoll.a instead of poll.o for optional linking.

2004-03-25  Pascal Obry  <p.obry@wanadoo.fr>

	* makefile:
	Do not use GNU/date as it is not available on all OS by default
	 and it is quite easy to avoid it.

2004-03-23  Pascal Obry  <p.obry@wanadoo.fr>

	* wsdl_3.ads, wsdl_3.adb, wsdl_3_main.adb:
	Enable commented-out code as now Character inside record is
	 properly supported.

	* wsdl_3.out:
	Update to new output.

2004-03-23  Pascal Obry  <p.obry@wanadoo.fr>

	* makefile:
	(RT_STD): Add stream_response.

	* stream_response.adb, stream_response.out:
	Initial revision.
